--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,28 @@
 /* add css module styles here (optional) */
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+
+.file_to_json_style {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.file_to_json_card_style {
+  width: 250px;
+  /* height: 100px; */
+  margin: 10px;
+  background: #fff;
+  border-radius: 15px !important;
+  border: 1px solid #f0f0f0;
+  padding: 10px 30px 30px 30px;
+}
+
+.file_to_json_padding_top {
+  padding-top: 15px;
+}
+
+.file_to_json_card_text_style {
+  text-align: start;
+  margin-bottom: 0;
+  font-weight: bold;
 }
