--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,4 +1,7 @@
-/* add css module styles here (optional) */
+* {
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+}
 
 
 .file_to_json_style {
@@ -24,4 +27,93 @@
   text-align: start;
   margin-bottom: 0;
   font-weight: bold;
+}
+
+.file_to_json_back_button {
+  width: 250px;
+  padding: 0 0 0 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.file_area {
+  width: 100%;
+  position: relative;
+}
+.file_area input[type="file"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+.file_area .file_dummy {
+  width: 100%;
+  padding: 30px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 2px dashed black;
+  text-align: center;
+  transition: background 0.3s ease-in-out;
+}
+.file_area .file_dummy .success {
+  display: none;
+}
+.file_area:hover .file_dummy {
+  background: rgba(255, 255, 255, 0.1);
+}
+.file_area input[type="file"]:focus + .file_dummy {
+  outline: 2px solid rgba(255, 255, 255, 0.5);
+  outline: -webkit-focus-ring-color auto 5px;
+}
+.file_area input[type="file"]:valid + .file_dummy {
+  border-color: rgba(0, 255, 0, 0.4);
+  background-color: rgba(0, 255, 0, 0.3);
+}
+.file_area input[type="file"]:valid + .file_dummy .success {
+  display: inline-block;
+}
+.file_area input[type="file"]:valid + .file_dummy .default {
+  display: none;
+}
+label {
+  font-weight: 500;
+  display: block;
+  margin: 4px 0;
+  text-transform: uppercase;
+  font-size: 13px;
+  overflow: hidden;
+}
+label span {
+  float: right;
+  text-transform: none;
+  font-weight: 200;
+  line-height: 1em;
+  font-style: italic;
+  opacity: 0.8;
+}
+.button_div {
+  display: flex;
+  justify-content: flex-end;
+}
+button {
+  margin: 10px 0;
+  align-content: flex-end;
+  padding: 8px 30px;
+  background: #053777;
+  color: rgba(255, 255, 255, 0.8);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 11px;
+  border: 0;
+  text-shadow: 0 1px 2px #fff;
+  cursor: pointer;
+}
+.form_group {
+  max-width: 400px;
+  margin: auto;
 }
